Layout for form dynamic

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <link rel="stylesheet" href="dist/css/dashboard.bundle.css">
+        <link rel="stylesheet" href="dist/css/common.bundle.css">
+        <!-- <link rel="stylesheet" href="dist/css/dashboard.bundle.css"> -->
     </head>
     <body>
         <div class="wrapper">
